--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
 
     </section>
-
+    <Footer>Cai nay cua Poly</Footer>
     <!-- Flowbite -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </body>
